--- a/_config.yml
+++ b/_config.yml
@@ -15,26 +15,26 @@ links:
 
   # IF YOU DON'T WANT TO USE ANY OF THE FOLLOWING, JUST LEAVE THE URL BLANK
     
-    # FACEBOOK
-  - Name: Facebook
-    URL: https://www.facebook.com
-    Username: harsh98trivedi
-    Color: '#3b5998'
-    Icon-Class: fab fa-facebook
+  #   # FACEBOOK
+  # - Name: Facebook
+  #   URL: https://www.facebook.com
+  #   Username: harsh98trivedi
+  #   Color: '#3b5998'
+  #   Icon-Class: fab fa-facebook
 
-    # INSTAGRAM
-  - Name: Instagram
-    URL: https://www.instagram.com
-    Username: harsh98trivedi
-    Color: '#DD2A7B'
-    Icon-Class: fab fa-instagram
+  #   # INSTAGRAM
+  # - Name: Instagram
+  #   URL: https://www.instagram.com
+  #   Username: harsh98trivedi
+  #   Color: '#DD2A7B'
+  #   Icon-Class: fab fa-instagram
 
-    # TWITTER
-  - Name: Twitter
-    URL: https://twitter.com
-    Username: harsh98trivedi
-    Color: '#1DA1F2'
-    Icon-Class: fab fa-twitter
+  #   # TWITTER
+  # - Name: Twitter
+  #   URL: https://twitter.com
+  #   Username: harsh98trivedi
+  #   Color: '#1DA1F2'
+  #   Icon-Class: fab fa-twitter
 
     # Cal.com
   - Name: Cal.com
