--- a/_config.yml
+++ b/_config.yml
@@ -36,19 +36,19 @@ links:
   #   Color: '#1DA1F2'
   #   Icon-Class: fab fa-twitter
 
-    # Cal.com
-  - Name: Cal.com
-    URL: https://cal.com
-    Username: harshtrivedi
-    Color: '#232323'
-    Icon-Class: fa fa-calendar-check
+  #   # Cal.com
+  # - Name: Cal.com
+  #   URL: https://cal.com
+  #   Username: harshtrivedi
+  #   Color: '#232323'
+  #   Icon-Class: fa fa-calendar-check
 
-    # CLUBHOUSE
-  - Name: Clubhouse
-    URL: https://www.clubhouse.com
-    Username: '@harsh98trivedi'
-    Color: '#f1c40f'
-    Icon-Class: fas fa-hand-paper -mt-0.5
+  #   # CLUBHOUSE
+  # - Name: Clubhouse
+  #   URL: https://www.clubhouse.com
+  #   Username: '@harsh98trivedi'
+  #   Color: '#f1c40f'
+  #   Icon-Class: fas fa-hand-paper -mt-0.5
     
     # LINKEDIN
   - Name: LinkedIn
@@ -57,12 +57,12 @@ links:
     Color: '#2867B2'
     Icon-Class: fab fa-linkedin-in
 
-    # YOUTUBE
-  - Name: YouTube
-    URL: https://www.youtube.com/channel
-    Username: UCS3zvA_2r1iGT7MB3NVCGAw
-    Color: '#ff0000'
-    Icon-Class: fab fa-youtube
+  #   # YOUTUBE
+  # - Name: YouTube
+  #   URL: https://www.youtube.com/channel
+  #   Username: UCS3zvA_2r1iGT7MB3NVCGAw
+  #   Color: '#ff0000'
+  #   Icon-Class: fab fa-youtube
 
     # GITHUB
   - Name: GitHub
@@ -78,35 +78,35 @@ links:
     Color: '#e17055'
     Text_Color: '#ffffff'
 
-    # TWITCH
-  - Name: Twitch
-    URL: 'https://twitch.tv'
-    Username: harsh98trivedi
-    Icon-Class: fab fa-twitch
-    Color: '#9147fe'
-    Text_Color: '#ffffff'
+  #   # TWITCH
+  # - Name: Twitch
+  #   URL: 'https://twitch.tv'
+  #   Username: harsh98trivedi
+  #   Icon-Class: fab fa-twitch
+  #   Color: '#9147fe'
+  #   Text_Color: '#ffffff'
 
-    # VIMEO
-  - Name: Vimeo
-    URL: 'https://vimeo.com'
-    Username: harshtrivedi
-    Icon-Class: fab fa-vimeo-v
-    Color: '#1ab7ea'
-    Text_Color: '#ffffff'
+  #   # VIMEO
+  # - Name: Vimeo
+  #   URL: 'https://vimeo.com'
+  #   Username: harshtrivedi
+  #   Icon-Class: fab fa-vimeo-v
+  #   Color: '#1ab7ea'
+  #   Text_Color: '#ffffff'
 
-    # MESSENGER
-  - Name: Messenger
-    URL: https://m.me
-    Username: theharshtrivedi
-    Color: '#006AFF'
-    Icon-Class: fab fa-facebook-messenger
+  #   # MESSENGER
+  # - Name: Messenger
+  #   URL: https://m.me
+  #   Username: theharshtrivedi
+  #   Color: '#006AFF'
+  #   Icon-Class: fab fa-facebook-messenger
 
-    # REDDIT
-  - Name: Reddit
-    URL: http://reddit.com/u
-    Username: harshtrivedi
-    Color: '#FF4500'
-    Icon-Class: fab fa-reddit-alien
+  #  # REDDIT
+  # - Name: Reddit
+  #   URL: http://reddit.com/u
+  #   Username: harshtrivedi
+  #   Color: '#FF4500'
+  #   Icon-Class: fab fa-reddit-alien
 
   #   # WHATSAPP
   # - Name: WhatsApp
@@ -115,28 +115,28 @@ links:
   #   Color: '#25d366'
   #   Icon-Class: fab fa-whatsapp
 
-    # TELEGRAM
-  - Name: Telegram
-    URL: http://telegram.me
-    Username: theharshtrivedi
-    Color: '#0088cc'
-    Icon-Class: fab fa-telegram-plane
+  #   # TELEGRAM
+  #  - Name: Telegram
+  #   URL: http://telegram.me
+  #   Username: theharshtrivedi
+  #   Color: '#0088cc'
+  #   Icon-Class: fab fa-telegram-plane
 
-    # SNAPCHAT
-  - Name: Snapchat
-    URL: https://www.snapchat.com/add
-    Username: 'harsh98trivedi'
-    Color: '#FFFC00'
-    Text_Color: '#000000'
-    Icon-Class: fab fa-snapchat-ghost
+  #   # SNAPCHAT
+  # - Name: Snapchat
+  #   URL: https://www.snapchat.com/add
+  #   Username: 'harsh98trivedi'
+  #   Color: '#FFFC00'
+  #   Text_Color: '#000000'
+  #   Icon-Class: fab fa-snapchat-ghost
 
-    # STEAM
-  - Name: Steam
-    URL: https://steamcommunity.com/id
-    Username: 'harshtrivedi'
-    Color: '#66c0f4'
-    Text_Color: '#000000'
-    Icon-Class: fab fa-steam
+  #   # STEAM
+  # - Name: Steam
+  #   URL: https://steamcommunity.com/id
+  #   Username: 'harshtrivedi'
+  #   Color: '#66c0f4'
+  #   Text_Color: '#000000'
+  #   Icon-Class: fab fa-steam
 
   #   # DISCORD
   # - Name: Discord
@@ -146,19 +146,19 @@ links:
   #   Color: '#5865F2'
   #   Text_Color: '#ffffff'
 
-    # PINTEREST
-  - Name: Pinterest
-    URL: https://pinterest.com
-    Username: 'harsh98trivedi'
-    Color: '#E60023'
-    Icon-Class: fab fa-pinterest
+  #   # PINTEREST
+  # - Name: Pinterest
+  #   URL: https://pinterest.com
+  #   Username: 'harsh98trivedi'
+  #   Color: '#E60023'
+  #   Icon-Class: fab fa-pinterest
 
-    # BEHANCE
-  - Name: Behance
-    URL: https://www.behance.net
-    Username: harsh98trivedi
-    Color: '#1769ff'
-    Icon-Class: fab fa-behance
+  #   # BEHANCE
+  # - Name: Behance
+  #   URL: https://www.behance.net
+  #   Username: harsh98trivedi
+  #   Color: '#1769ff'
+  #   Icon-Class: fab fa-behance
 
   #   # DRIBBBLE
   # - Name: Dribbble
@@ -167,35 +167,35 @@ links:
   #   Color: '#ea4c89'
   #   Icon-Class: fab fa-dribbble
 
-    # DEVIANTART
-  - Name: DeviantArt
-    URL: https://www.deviantart.com
-    Username: harshtrivedi
-    Icon-Class: fab fa-deviantart
-    Color: '#05CC46'
-    Text_Color: '#ffffff'
+  #   # DEVIANTART
+  # - Name: DeviantArt
+  #   URL: https://www.deviantart.com
+  #   Username: harshtrivedi
+  #   Icon-Class: fab fa-deviantart
+  #   Color: '#05CC46'
+  #   Text_Color: '#ffffff'
 
-    # FIGMA
-  - Name: Figma
-    URL: https://www.figma.com
-    Username: '@harshtrivedi'
-    Icon-Class: fab fa-figma
-    Color: '#ff2865'
-    Text_Color: '#ffffff'
+  #   # FIGMA
+  # - Name: Figma
+  #   URL: https://www.figma.com
+  #   Username: '@harshtrivedi'
+  #   Icon-Class: fab fa-figma
+  #   Color: '#ff2865'
+  #   Text_Color: '#ffffff'
 
-    # SPOTIFY
-  - Name: Spotify
-    URL: http://open.spotify.com/user
-    Username: 314ihryk3edvtusti6il3oy3x5da
-    Color: '#1DB954'
-    Icon-Class: fab fa-spotify
+  #   # SPOTIFY
+  # - Name: Spotify
+  #   URL: http://open.spotify.com/user
+  #   Username: 314ihryk3edvtusti6il3oy3x5da
+  #   Color: '#1DB954'
+  #   Icon-Class: fab fa-spotify
 
-    # SOUNDCLOUD
-  - Name: SoundCloud
-    URL: https://www.soundcloud.com
-    Username: harsh98trivedi
-    Color: '#FE5000'
-    Icon-Class: fab fa-soundcloud
+  #   # SOUNDCLOUD
+  # - Name: SoundCloud
+  #   URL: https://www.soundcloud.com
+  #   Username: harsh98trivedi
+  #   Color: '#FE5000'
+  #   Icon-Class: fab fa-soundcloud
 
   #    # TIKTOK
   # - Name: TikTok
