--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ links:
     # LINKEDIN
   - Name: LinkedIn
     URL: https://www.linkedin.com/in
-    Username: harsh98trivedi
+    Username: adrian-jaramillo-rodriguez
     Color: '#2867B2'
     Icon-Class: fab fa-linkedin-in
 
@@ -67,13 +67,13 @@ links:
     # GITHUB
   - Name: GitHub
     URL: http://github.com
-    Username: harsh98trivedi
+    Username: adriasir123
     Color: '#6e5494'
     Icon-Class: fab fa-github
 
     # EMAIL
   - Name: Email
-    URL: 'mailto:harshtrivedi@duck.com'
+    URL: 'mailto:adrjaro@gmail.com'
     Icon-Class: fas fa-envelope
     Color: '#e17055'
     Text_Color: '#ffffff'
@@ -204,21 +204,21 @@ links:
   #   Color: '#FE2C55'
   #   Icon-Class: fab fa-tiktok
 
-    # MEDIUM
-  - Name: Medium
-    URL: 'https://medium.com'
-    Username: '@harsh98trivedi'
-    Icon-Class: fab fa-medium-m
-    Color: '#00ab6c'
-    Text_Color: '#ffffff'
+  #   # MEDIUM
+  # - Name: Medium
+  #   URL: 'https://medium.com'
+  #   Username: '@harsh98trivedi'
+  #   Icon-Class: fab fa-medium-m
+  #   Color: '#00ab6c'
+  #   Text_Color: '#ffffff'
 
-    # DEV.TO
-  - Name: Dev.to
-    URL: 'https://dev.to'
-    Username: harsh98trivedi
-    Icon-Class: fab fa-dev
-    Color: '#ffffff'
-    Text_Color: '#000000'
+  #  # DEV.TO
+  # - Name: Dev.to
+  #   URL: 'https://dev.to'
+  #   Username: harsh98trivedi
+  #   Icon-Class: fab fa-dev
+  #   Color: '#ffffff'
+  #   Text_Color: '#000000'
 
   #   # TUMBLR
   # - Name: Tumblr
@@ -237,19 +237,19 @@ links:
 
     # CUSTOM LINK
   - Name: Blog
-    URL: https://harsh98trivedi.github.io/blog
+    URL: https://blog.adrianj.eu
     Icon-Class: fas fa-link
     Color: '#ffb142'
     Text_Color: '#ffffff'
 
-  - Name: Links
-    URL: https://github.com/harsh98trivedi/links
-    Icon-Class: fas fa-link
-    Color: '#d94869'
-    Text_Color: '#ffffff'
+  # - Name: Links
+  #   URL: https://github.com/harsh98trivedi/links
+  #   Icon-Class: fas fa-link
+  #   Color: '#d94869'
+  #   Text_Color: '#ffffff'
 
 # YOU CAN REMOVE FOOTER COMPLETELY BY SIMPLY REMOVING EITHER THE YES OR REMOVING THE FOOTER STATEMENT BELOW COMPLETELY
-footer: 'Yes'
+# footer: 'Yes'
 
 # STOP EDITING HERE ---------- YOU'VE REACHED THE END OF THE CONFIGURATION
 
