--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 name: Adrián Jaramillo Rodríguez
 
 # YOUR BRAND/PERSONAL TAGLINE
-tagline: ¡Hola! Soy Adrián. I'm a passionate Tech Lover from Kanpur, apart from that I'm a Graphic Designer and an OpenSource enthusiast Inspired by Imagination.
+tagline: ¡Hola! Soy Adrián. Soy un apasionado de la tecnología de Utrera, apart from that I'm a Graphic Designer and an OpenSource enthusiast Inspired by Imagination.
 
 # YOUR/BRAND IMAGE URL
-Image_URL: https://imgur.com/226qGYr
+Image_URL: https://i.imgur.com/226qGYr.jpg
 
 # CHANGE THE BACKGROUND IMAGE OF THE WEBSITE BY JUST ADDING THE IMAGE URL
 Cover_Image: https://images.unsplash.com/photo-1512470876302-972faa2aa9a4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80
