--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: Adrián Jaramillo Rodríguez
 
 # YOUR BRAND/PERSONAL TAGLINE
-tagline: ¡Hola! Soy Adrián. Soy un apasionado de la tecnología de Utrera, apart from that I'm a Graphic Designer and an OpenSource enthusiast Inspired by Imagination.
+tagline: ¡Hola! Soy Adrián. Soy un apasionado de la tecnología de Utrera, además de ser estudiante de sysadmin y un fanático del OpenSource.
 
 # YOUR/BRAND IMAGE URL
 Image_URL: https://i.imgur.com/226qGYr.jpg
